<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updatepasswordbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text_blue"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="22dp"
        android:text="Update Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#032947"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/closeUpdatePassword"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_add_24"
            android:backgroundTint="@color/text_blue"
            android:rotation="45"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/ChangePasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Change Password"
            android:textColor="@color/text_blue"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/enterOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Old Password"
            android:textColor="#697B8C"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/oldPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_inputbox"
            android:backgroundTint="#1C2B37"
            android:ems="10"
            android:hint="i.e. 123456"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textColorHint="#45525E"
            app:boxBackgroundMode="none" />

        <TextView
            android:id="@+id/newPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="New Password"
            android:textColor="#697B8C"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_inputbox"
            android:backgroundTint="#1C2B37"
            android:ems="10"
            android:hint="i.e. 654321"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textVisiblePassword"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:textColorHint="#45525E"
            app:boxBackgroundMode="none"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>