<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16222B"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="322dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Settings"
        android:textColor="#3F7FB6"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/navbar"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_nav" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/text_blue"
        android:fontFamily="@font/poppins_semibold"
        android:paddingHorizontal="20dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="Change Login Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#032947"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsText"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>