...
    <item
        android:id="@+id/password_gen"
        android:title=""
        android:icon="@drawable/ic_password_24"/>

    <item
        android:id="@+id/settings"
        android:title=""
        android:icon="@drawable/ic_settings"/>
</menu>
